// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
.c0 {
  background: #fff;
  color: #333;
  background: #333;
  color: #fff;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin-inline: auto;
  padding: 3.2rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background dark 2`] = `
.c0 {
  background: #fff;
  color: #333;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin-inline: auto;
  padding: 3.2rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;
